The problem of zero probability of coming 99,999 resolved.

--- a/a1-random-5digit-int.html
+++ b/a1-random-5digit-int.html
@@ -12,10 +12,19 @@
         // Introducing a random 5-digit intiger or a number less than it.
         // (A number less than 100,000)
         // There is a problem in this code snippet: The probability of coming 99,999 is zero.
-        random = Math.random();
-        random = random * 99999;
-        random = Math.floor(random);
-        console.log(random);
+        random1 = Math.random();
+        random1 = random1 * 99999;
+        random1 = Math.floor(random1);
+        console.log(random1);
+
+        // The problem of zero probability of coming 99,999 resolved in the bellow revision.
+        random2 = Math.random();
+        random2 = random2 * 100000;
+        random2 = Math.floor(random2);
+        if (random2 === 100000) {
+            random2 = random2 - 1;
+        }
+        console.log(random2);
     </script>
 </body>
 
